--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Nombre y Apellido(s)">
 
     <!--Sustituir por los datos del alumno-->
-    <title>Nombre y Apellido(s)</title>
+    <title>Alejandro Castel de la Torre</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -17,16 +17,16 @@
   <body>
     <div class="container header-bar">
       <!--Sustituir por los datos del alumno-->
-      <h3>Nombre y Apellido(s) <span><img style="width: 214px; height: 164px;" class='img-circle' alt="Nombre y Apellido(s)" src="img/foto.png" align="right"></span></h3>
+      <h3>Alejandro Castel de la Torre<span><img style="width: 214px; height: 164px;" class='img-circle' alt="Nombre y Apellido(s)" src="img/foto.png" align="right"></span></h3>
       <p>
         <!--Sustituir por los datos del alumno-->
-        Posición<br>
-        Departamento<br>
-        Organización
+        Profesor<br>
+        Departamento Informática<br>
+        Centre de Estudios Stucom
       </p>
       <address>
         <!--Sustituir por los datos del alumno-->
-        <span class='glyphicon glyphicon-pencil'></span> correo [at] dominio <br>
+        <span class='glyphicon glyphicon-pencil'></span> alex.castel [at] stucom.com <br>
       </address>
 
       <!--Sustituir por los datos del alumno-->
@@ -41,21 +41,21 @@
       <div class='row'>
         <div class='col-sm-8'>
           <br>
-          <p>Este párrafo contiene una descripción breve del alumno. Se trata de un texto que permite conocer su ocupación actual y sus principales títulos académicos y/o profesionales.  </p>
+          <p>Actualmente trabajo como profesor de CFGM y CFGS de Informática en el Centro de Estudios Stucom de Barcelona. Mi especialidad son los sistemas informáticos y las redes.  </p>
           
-          <p>En este segundo párrafo nos centraremos en las capacidades de desarrollo del alumno, de forma que se pueda conocer si sabe programar, en qué lenguajes, qué sistemas operativos conoce y domina, etc. También se pueden mencionar los proyectos que se han desarrollado en GitHub, o cualquier otra información que se considere relevante.</p>
+          <p>Trabajo con los sistemas operativos Windows Server y Linux Ubuntu y Debian, en Github es la primera vez que hago una incursión, pero creo que es una herramienta muy interesante. Además este curso me corresponde explicar sistemas en el ciclo de programación WEB e incluiré el uso de Github como control de versiones.</p>
 
           <h3>Cursos</h3>
           <table class='table table-striped'>
             <tr><td><a href="https://www.miriadax.net" target="blank">Introducción a Linux como entorno de desarrollo de sistemas software</a>.</td></tr>
-            <tr><td>Otros...</td></tr>
+            <tr><td>Introducción a la programación Android</td></tr>
           </table>
         </div>
       </div>
 
       <footer class="footer">
         <!--Sustituir por los datos del alumno-->
-        <p>&copy; Nombre y Apellido(s) - 2017</p>
+        <p>&copy; Alejandro Castel de la Torre - 2018</p>
       </footer>
 
     </div>
